Working on adding task types & links to scorecards
Also setup staging database with precompiler dirrective.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "PostgreSQL": "User ID=InventoryClient;Password=XoQFe2rWJbUVbvzyMPNqzoMf;Server=24.116.245.60;Port=2222;Database=testingframework;Pooling=true;"
+    "PostgreSQL": "User ID=InventoryClient;Password=XoQFe2rWJbUVbvzyMPNqzoMf;Server=24.116.245.60;Port=2222;Database=testingframework;Pooling=true;",
+    "PostgreSQL-Dev": "User ID=InventoryClient;Password=XoQFe2rWJbUVbvzyMPNqzoMf;Server=24.116.245.60;Port=2222;Database=testingframework-dev;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
