Updated Database connection string for Juggernaut PC (Old Garbage) and now applies database migratinos on startup.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSQL": "User ID=InventoryClient;Password=XoQFe2rWJbUVbvzyMPNqzoMf;Server=24.116.245.60;Port=2222;Database=testingframework;Pooling=true;"
+    "PostgreSQL": "User ID=postgres;Password=postgres;Server=localhost;Port=5432;Database=testingframework;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
